--- a/FirstGameProject.csproj
+++ b/FirstGameProject.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Scene\BaseScene.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scene\TestScene.cs" />
+    <Compile Include="Scene\TitleScene.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
