--- a/FirstGameProject.csproj
+++ b/FirstGameProject.csproj
@@ -43,11 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extension.cs" />
+    <Compile Include="GameObject.cs" />
+    <Compile Include="Interactable.cs" />
     <Compile Include="Scene\BaseScene.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scene\TestScene.cs" />
+    <Compile Include="Scene\StartPieldGrassland.cs" />
     <Compile Include="Scene\TitleScene.cs" />
   </ItemGroup>
   <ItemGroup>
